gcc/testsuite/gm2/errors/fail/testmodule.mod
MODULE testmodule ;

IMPORT Storage ;

BEGIN
   Storage (1)
END testmodule.